--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -20,7 +20,8 @@
 				<ResourceDictionary Source="pack://application:,,,/LanguageWeaverProvider;component/Controls/WatermarkPasswordBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
-			<converters:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
+			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
 
 			<Style TargetType="Image">
 				<Setter Property="RenderOptions.BitmapScalingMode"
@@ -45,19 +46,22 @@
 
 		<StackPanel Grid.Row="0"
 					Grid.ColumnSpan="2"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}, ConverterParameter=Inverted}">
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
 			<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
-					Command="{Binding SelectAuthenticationTypeCommand}"
+					Command="{Binding SignLoggedUserCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
-					IsEnabled="False"
+					Visibility="{Binding TranslationOptions.CloudCredentials.UserID, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
 					Cursor="Hand"
-					Width="188"
+					HorizontalAlignment="Center"
+					Width="200"
 					Margin="0 0 0 8">
 				<Button.Content>
 					<StackPanel Orientation="Horizontal">
 						<TextBlock Text="•"
 								   Foreground="#3dfc03"/>
-						<TextBlock Text="Continue as -username-" 
+						<TextBlock Text="" 
+								   Margin="0 0 0 0"/>
+						<TextBlock Text="{Binding TranslationOptions.CloudCredentials.UserID}" 
 								   Margin="4 0 0 0"/>
 					</StackPanel>
 				</Button.Content>
@@ -68,21 +72,21 @@
 					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
 					IsEnabled="False"
 					Cursor="Hand"
-					Width="188"
+					Width="200"
 					Margin="0 8" />
 			<Button Content="User credentials"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
 					Cursor="Hand"
-					Width="188"
+					Width="200"
 					Margin="0 8" />
 			<Button Content="User secret"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
 					Cursor="Hand"
-					Width="188"
+					Width="200"
 					Margin="0 8" />
 		</StackPanel>
 
@@ -107,7 +111,7 @@
 					   Grid.Column="0"
 					   Text="User ID"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center" />
 
 			<TextBox Grid.Row="0"
@@ -118,7 +122,7 @@
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" 
+					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
 					 Margin="0 8"/>
 			<!-- User ID -->
 
@@ -128,17 +132,20 @@
 						 PasswordChanged="UserPassword_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
-						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
 			<!-- Password -->
 
 			<!-- Client ID -->
-			<PasswordBox Grid.Row="2"
-						 Grid.ColumnSpan="2"
-						 PasswordChanged="ClientID_Changed"
-						 Style="{StaticResource WatermarkPasswordBox}"
-						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client ID"
-						 Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" 
-						 Margin="0 8"/>
+			<TextBox Grid.Row="0"
+					 Grid.ColumnSpan="2"
+					 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
+					 Style="{StaticResource WatermarkTextBox}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="Client ID"
+					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="UserID"
+					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+					 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 Margin="0 8" />
 			<!-- Client ID -->
 
 			<!-- Client Secret -->
@@ -149,7 +156,7 @@
 						 PasswordChanged="ClientSecret_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
 						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
-						 Visibility="{Binding IsSecretSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}" />
+						 Visibility="{Binding IsSecretSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
 			<!-- Client Secret -->
 		</Grid>
 
@@ -158,9 +165,9 @@
 				Content="Sign in"
 				Command="{Binding SignInCommand}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 				Cursor="Hand"
-				Width="188"
+				Width="200"
 				Margin="0 32 0 8" />
 
 		<Button Grid.Row="3"
@@ -168,9 +175,9 @@
 				Content="Change authentication type"
 				Command="{Binding BackCommand}"
 				Style="{StaticResource Sdl.Button.SecondaryStyle}"
-				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource InvertableBooleanToVisibilityConverter}}"
+				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 				Cursor="Hand"
-				Width="188"
+				Width="200"
 				Margin="0 8 0 8" />
 	</Grid>
 </UserControl>
