--- a/LanguageWeaverProvider/View/Cloud/CloudMappingView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudMappingView.xaml
@@ -1,11 +1,8 @@
 ﻿<UserControl x:Class="LanguageWeaverProvider.View.Cloud.CloudMappingView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LanguageWeaverProvider.View.Cloud"
-			 xmlns:root="clr-namespace:LanguageWeaverProvider"
-			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Cloud"
 			 d:DataContext="{d:DesignInstance viewModel:CloudMappingViewModel}"
@@ -16,30 +13,171 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/DataGridResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/comboboxresources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
+
+			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
+			<converters:EmptyCollectionToVisibilityConverter x:Key="EmptyCollectionToVisibilityConverter" />
+
 		</ResourceDictionary>
 	</UserControl.Resources>
-	
-    <Grid>
+
+	<Grid>
 		<DataGrid x:Name="myDataGrid"
 				  ItemsSource="{Binding PairMappings}"
 				  Style="{StaticResource Sdl.DataGrid.GenericStyle}"
-				  AutoGenerateColumns="False">
+				  AutoGenerateColumns="False"
+				  Margin="-2 -6 -2 -11">
 			<DataGrid.Columns>
-				
-				<DataGridTextColumn Header="Language pair"
-									Binding="{Binding Path=DisplayName}"
-									IsReadOnly="True"/>
-				
-				<DataGridTextColumn Header="Source code"
-									Binding="{Binding Path=SourceCode}"
-									IsReadOnly="True"/>
-				
-				<DataGridTextColumn Header="Target code"
-									Binding="{Binding Path=TargetCode}"
-									IsReadOnly="True" />
+				<DataGridTemplateColumn Header="Language pair"
+										Width="1.5*"
+										IsReadOnly="True">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<TextBlock Text="{Binding DisplayName}"
+									   Visibility="{Binding SourceCode, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}"
+									   VerticalAlignment="Center"
+									   Margin="4 0" />
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Source"
+										MinWidth="64">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<StackPanel VerticalAlignment="Center"
+										Margin="4 0">
+								<TextBlock Text="{Binding SourceCode}"
+										   Visibility="{Binding SourceCode, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}" />
+								<TextBlock Text="Not set"
+										   Foreground="#f24d41"
+										   FontWeight="DemiBold"
+										   Visibility="{Binding SourceCode, Converter={StaticResource EmptyStringToVisibilityConverter}}" />
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Target"
+										MinWidth="64">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<StackPanel VerticalAlignment="Center"
+										Margin="4 0">
+								<TextBlock Text="{Binding TargetCode}"
+										   Visibility="{Binding TargetCode, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}" />
+								<TextBlock Text="Not set"
+										   Foreground="#f24d41"
+										   FontWeight="DemiBold"
+										   Visibility="{Binding TargetCode, Converter={StaticResource EmptyStringToVisibilityConverter}}" />
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Models"
+										MinWidth="128">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<StackPanel>
+								<ComboBox ItemsSource="{Binding Models}"
+										  SelectedItem="{Binding SelectedModel, UpdateSourceTrigger=PropertyChanged}"
+										  Style="{StaticResource Sdl.ComboBox.ListViewRow.Style}"
+										  DisplayMemberPath="DisplayName"
+										  SelectedIndex="0"
+										  BorderThickness="0">
+								</ComboBox>
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Dictionaries"
+										MinWidth="172">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<StackPanel>
+								<ComboBox ItemsSource="{Binding Dictionaries}"
+										  SelectedItem="{Binding SelectedDictionary, UpdateSourceTrigger=PropertyChanged}"
+										  Style="{StaticResource Sdl.ComboBox.ListViewRow.Style}"
+										  DisplayMemberPath="Name"
+										  SelectedIndex="0"
+										  BorderThickness="0">
+								</ComboBox>
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+
+				<DataGridTemplateColumn Header="Linguistic Options"
+										Width="1*">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate DataType="model:PairMapping">
+							<StackPanel VerticalAlignment="Center">
+								<ListBox  x:Name="linguisticOptionsList"
+										  ItemsSource="{Binding LinguisticOptions, UpdateSourceTrigger=PropertyChanged}"
+										  Visibility="{Binding LinguisticOptions, Converter={StaticResource EmptyCollectionToVisibilityConverter}}"
+										  BorderThickness="0"
+										  Background="Transparent"
+										  Padding="0">
+									<ListBox.Resources>
+										<Style TargetType="{x:Type ListBoxItem}">
+											<Setter Property="Background"
+													Value="Transparent" />
+										</Style>
+										<SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}"
+														 Color="Transparent" />
+									</ListBox.Resources>
+
+									<ListBox.ItemContainerStyle>
+										<Style TargetType="ListBoxItem">
+											<Setter Property="IsTabStop"
+													Value="False" />
+											<Setter Property="Focusable"
+													Value="False" />
+											<Setter Property="Template">
+												<Setter.Value>
+													<ControlTemplate TargetType="ListBoxItem">
+														<Border Background="Transparent">
+															<ContentPresenter HorizontalAlignment="Stretch"
+																			  VerticalAlignment="Center" />
+														</Border>
+													</ControlTemplate>
+												</Setter.Value>
+											</Setter>
+										</Style>
+									</ListBox.ItemContainerStyle>
+
+									<ListBox.ItemTemplate>
+										<DataTemplate>
+											<DockPanel Margin="4 0">
+												<TextBlock Text="{Binding DispayName}"
+														   ToolTip="{Binding Name}"
+														   VerticalAlignment="Center"
+														   DockPanel.Dock="Left"
+														   MinWidth="85"
+														   Margin="0" />
+
+												<ComboBox ItemsSource="{Binding Values}"
+														  SelectedValue="{Binding SelectedValue}"
+														  Style="{StaticResource Sdl.ComboBox.Generic.Style}"
+														  DockPanel.Dock="Right"
+														  HorizontalAlignment="Stretch"
+														  Cursor="Hand" />
+											</DockPanel>
+										</DataTemplate>
+									</ListBox.ItemTemplate>
+								</ListBox>
+
+								<TextBlock Text="Not available"
+										   Visibility="{Binding LinguisticOptions, Converter={StaticResource EmptyCollectionToVisibilityConverter}, ConverterParameter=Inverted}" 
+										   Margin="4 0"/>
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
 			</DataGrid.Columns>
 		</DataGrid>
 	</Grid>
-	
 </UserControl>
