--- a/LanguageWeaverProvider/View/LanguageMappingProviderView.xaml
+++ b/LanguageWeaverProvider/View/LanguageMappingProviderView.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:styles="clr-namespace:LanguageWeaverProvider.Style"
 		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 		xmlns:viewmodel="clr-namespace:LanguageWeaverProvider.ViewModel"
@@ -44,7 +43,8 @@
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 
-			<styles:WindowsControl Grid.Row="0" />
+			<styles:WindowsControl Grid.Row="0" 
+								   Margin="0 20 0 0"/>
 
 			<TextBox Grid.Row="1"
 					 Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"
