--- a/LanguageWeaverProvider/View/PairMappingView.xaml
+++ b/LanguageWeaverProvider/View/PairMappingView.xaml
@@ -39,7 +39,7 @@
 						Value="HighQuality" />
 			</Style>
 
-			<converters:InvertableBooleanToVisibilityConverter x:Key="InvertableBooleanToVisibilityConverter" />
+			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
 			<DataTemplate DataType="{x:Type cloudViewModel:CloudMappingViewModel}">
 				<cloudView:CloudMappingView />
@@ -49,9 +49,9 @@
 
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="96" />
+			<RowDefinition Height="72" />
 			<RowDefinition Height="*" />
-			<RowDefinition Height="96" />
+			<RowDefinition Height="64" />
 		</Grid.RowDefinitions>
 
 		<Grid.ColumnDefinitions>
@@ -80,7 +80,7 @@
 		<StackPanel Grid.Row="2"
 					Grid.Column="0"
 					Orientation="Horizontal"
-					Margin="24">
+					Margin="24 12">
 			<Button Content="Manage account"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Command="{Binding NavigateToCommand}"
@@ -93,7 +93,7 @@
 					FontSize="12"
 					Height="32"
 					Width="168"
-					Margin="12 0 0 0"/>
+					Margin="12 0 0 0" />
 			<Button Content="Settings"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Command="{Binding OpenSettingsViewCommand}"
@@ -102,17 +102,11 @@
 					Margin="12 0 0 0" />
 		</StackPanel>
 
-		<Button Content="Refresh"
-				Grid.Row="2"
-				Grid.Column="1"
-				HorizontalAlignment="Left" 
-				Height="20"/>
-
 		<StackPanel Grid.Row="2"
 					Grid.Column="1"
 					Orientation="Horizontal"
 					HorizontalAlignment="Right"
-					Margin="24">
+					Margin="24 12">
 			<Button Content="Cancel"
 					Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					Command="{Binding CloseCommand}"
