Add button to switch accessibility features on/off

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/EditGlossaryWindow.xaml
@@ -143,6 +143,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="❌"
+                                    AutomationProperties.Name="Delete entry button"
                                     Command="{Binding DeleteEntryCommand, RelativeSource={RelativeSource AncestorType=Window}}"
                                     CommandParameter="{Binding SelectedItem, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
                         </DataTemplate>
